open_page New upload-김진수

--- a/src/css/color.css
+++ b/src/css/color.css
@@ -17,6 +17,7 @@
 .bg-violet { background-color: violet; }
 .bg-white { background-color: white; }
 .bg-yellow { background-color: yellow; }
+.bg-style { background-color: #CBCEF6; }
 
 .font-aqua { color: aqua; }
 .font-aquamarine { color: aquamarine; }
