--- a/src/pages/premium/premium1/premium1_1.css
+++ b/src/pages/premium/premium1/premium1_1.css
@@ -31,6 +31,19 @@
     font-weight: bold;
 }
 
+.premium1_1_Info_name {
+    color: rgb(255, 255, 255);
+    box-sizing: border-box;
+    width: 300px;
+    text-align: center;
+    margin-bottom: 50px;
+    padding: 15px;
+    border-radius: 10px;
+    white-space: nowrap;
+    font-size: 30px;
+    font-weight: bold;
+}
+
 .premium1_1_Info{
     display: flex;
     flex-direction: row;
@@ -64,7 +77,7 @@
     font-size: 15px;
 }
 
-.premium1_1_Info_1_1_name{
+.premium1_1_Info_1_1_brands{
     margin-left: 15px;
     color: rgb(255, 255, 255);
     font-size: 20px;
