--- a/src/pages/premium/premium2/premium2_1.css
+++ b/src/pages/premium/premium2/premium2_1.css
@@ -31,6 +31,18 @@
     font-size: 30px;
 }
 
+.premium2_1_Info_name {
+    color: rgb(68, 68, 68);
+    box-sizing: border-box;
+    width: 300px;
+    text-align: center;
+    margin-bottom: 50px;
+    padding: 15px;
+    border-radius: 10px;
+    white-space: nowrap;
+    font-size: 30px;
+}
+
 .premium2_1_Info{
     display: flex;
     flex-direction: row;
@@ -63,7 +75,7 @@
     font-size: 15px;
 }
 
-.premium2_1_Info_1_1_name{
+.premium2_1_Info_1_1_brands{
     margin-left: 15px;
     color: rgb(41, 41, 41);
     font-size: 20px;
