--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -59,11 +59,13 @@ body{
     transform: translateX(0%);
     transition: transform 2s ease-in-out;
     z-index: 4;
+    opacity: 1;
 }
 
 .myStory.close{
+    opacity: 0;
     transform: translateX(150%);
-    transition: transform 2s ease-in-out;
+    transition: all 2s ease-in-out;
 }
 
 .loginPage{
@@ -92,11 +94,13 @@ body{
     transition: transform 1.5s ease-in-out;
     z-index: 4;
     text-align: center;
+    opacity: 1;
 }
 
 .loginContainer.close{
+    opacity: 0;
     transform: translateX(100%); 
-    transition: transform 1.5s ease-in-out;
+    transition: all 1.5s ease-in-out;
 }
 
 .signUp{
@@ -116,11 +120,13 @@ body{
     transition: transform 1.5s ease-in-out;
     z-index: 3;
     text-align: center;
+    opacity: 1;
 }
 
 .signUp.close{
-    transform: translateY(700%); 
-    transition: transform 1.5s ease-in-out;
+    opacity: 0;
+    transform: translateY(100%); 
+    transition: all 1.5s ease-in-out;
 }
 
 .sidebar{
@@ -130,21 +136,46 @@ body{
 .loginPage.active, .category_3.active{
     color: rgb(177, 177, 177);  
 }
-/* 
-.drawerB {
-    position: relative;
-} */
 
 .drawerBtn{
-    background-color: rgba(215, 210, 210);
-    border-radius: 21px;
-    width: 54px;
-    height: 54px;
     position: fixed;
-    bottom: 105px;
-    left: 100px;
+    left: 6vw;
+    bottom: 9.5vh;
     z-index: 1;
     cursor: pointer;
+    width: 57px;
+    z-index: 1;
+}
+
+.drawerBtn:hover{
+    filter: drop-shadow(0 0 20px rgba(182, 182, 182, 0.7));
+    transition: drop-shadow 3s ease-in-out;
+}
+
+.drawerBtn:not(:hover){
+    filter: drop-shadow(0 0 20px transparent);
+    transition: drop-shadow 3s ease-in-out;
+}
+
+.drawerApplyTxt{
+    opacity: 0;
+    position: fixed;
+    bottom: 7vh;
+    left: 6vw;
+    white-space : nowrap;
+    font-size: 15px;
+    z-index: 1;
+    color: rgb(255, 255, 255);
+}
+
+.drawerBtn:hover + .drawerApplyTxt{
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.drawerBtn:not(:hover) + .drawerApplyTxt{
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .drawerApply{
@@ -164,11 +195,13 @@ body{
     transition: transform 1.5s ease-in-out;
     z-index: 3;
     text-align: center;
+    opacity: 1;
 }
 
 .drawerApply.close{
+    opacity: 0;
     transform: translateY(100%); 
-    transition: transform 1.5s ease-in-out;
+    transition: all 1.5s ease-in-out;
 }
   
 @media only screen and (max-width: 850px) {
