--- a/src/pages/shop.css
+++ b/src/pages/shop.css
@@ -8,7 +8,7 @@
     height: 100vh;
     width: 100vw;
     cursor: grab;
-    background-color: rgb(233, 180, 180);
+    background-color: black;
     position: relative;
 }
 
@@ -18,7 +18,6 @@
     left: 5vw;
     width: 50vw;
     height: 65vh;
-    /* background-color: rgb(214, 214, 214); */
     box-sizing: border-box;
 }
 
@@ -28,7 +27,6 @@
     left: 60vw;
     width: 50vw;
     height: 65vh;
-    /* background-color: rgb(214, 214, 214); */
     box-sizing: border-box;
 }
 
@@ -38,7 +36,6 @@
     left: 115vw;
     width: 50vw;
     height: 65vh;
-    /* background-color: rgb(214, 214, 214); */
     box-sizing: border-box;
 }
 
@@ -48,7 +45,6 @@
     left: 170vw;
     width: 50vw;
     height: 65vh;
-    /* background-color: rgb(214, 214, 214); */
     box-sizing: border-box;
 }
 
@@ -147,7 +143,7 @@
     width: 0;
     white-space: nowrap;
     overflow: hidden;
-    color: rgb(31, 65, 255);
+    color: rgb(255, 255, 255);
     font-family: 'Nanum Myeongjo', serif;
 }
 /* ::before	요소 내용 앞쪽에 새 컨텐츠를 추가 */
@@ -159,7 +155,7 @@
     width: 0px;
     white-space: nowrap;
     overflow: hidden;
-    color: rgb(255, 94, 94);
+    color: #96E3D5 ;
     font-family: 'Nanum Myeongjo', serif;
 }
 
@@ -170,7 +166,7 @@
     width: 0px;
     white-space: nowrap;
     overflow: hidden;
-    color: rgb(255, 255, 255);
+    color: #FBC1BF;
     font-family: 'Nanum Myeongjo', serif;
 }
 /* ::before	요소 내용 앞쪽에 새 컨텐츠를 추가 */
@@ -182,7 +178,7 @@
     width: 0px;
     white-space: nowrap;
     overflow: hidden;
-    color: rgb(255, 255, 255);
+    color: #6E6104;
     font-family: 'Nanum Myeongjo', serif;
 }
 
@@ -202,16 +198,6 @@
     width: 0;
 }
 
-.product_link:hover + .product_name,
-.product_link:hover + .product_name::before{
-    z-index: 2;
-}
-
-.product_link:hover + .product_name_2,
-.product_link:hover + .product_name_2::before{
-    z-index: 2;
-}
-
 .product_sub_name_1{
     position: absolute;
     top: 53vh;
@@ -220,7 +206,7 @@
     font-weight: bold;
     text-align: center;
     white-space: nowrap;
-    color: rgb(255, 255, 255);
+    color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
     font-family: 'Nanum Myeongjo', serif;
 }
@@ -233,7 +219,7 @@
     font-weight: bold;
     text-align: center;
     white-space: nowrap;
-    color: rgb(255, 255, 255);
+    color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
     font-family: 'Nanum Myeongjo', serif;
 }
@@ -246,7 +232,7 @@
     font-weight: bold;
     text-align: center;
     white-space: nowrap;
-    color: rgb(255, 255, 255);
+    color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
     font-family: 'Nanum Myeongjo', serif;
 }
@@ -259,7 +245,7 @@
     font-weight: bold;
     text-align: center;
     white-space: nowrap;
-    color: rgb(255, 255, 255);
+    color: rgba(87, 87, 87, 0.3);
     overflow: hidden;
     font-family: 'Nanum Myeongjo', serif;
 }
